Refs #61065 fix btn galaxy on mobile menu

--- a/sass/components/_header-galaxy.scss
+++ b/sass/components/_header-galaxy.scss
@@ -7,7 +7,7 @@
   .menu-open & {
     display: block;
     order: 1;
-    margin-top: -1rem;
+    margin-top: 1rem;
 
     .button-galaxy {
       padding-right: 0;
