--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -184,9 +184,9 @@ header {
     flex-wrap: nowrap;
     overflow-y: auto;
 
-    .block-unesco-commonlanguage-blocklanguage-interface {
-      padding-bottom: 2rem;
-    }
+    //.block-unesco-commonlanguage-blocklanguage-interface {
+    //  padding-bottom: 2rem;
+    //}
   }
 
   .header {
